--- a/index.html
+++ b/index.html
@@ -64,6 +64,29 @@
 
 <dl class="new">
 
+
+
+<dt>2025/02/某日<span>お知らせ</span></dt>
+<dd>PRIME-Camのデュワー窓をサファイアに変更しました。</dd>
+
+<dt>2025/01/某日<span>お知らせ</span></dt>
+<dd>PRIMEの開所式を実施しました。</dd>
+
+<dt>2024/06/某日<span>お知らせ</span></dt>
+<dd>ドームモーターをアップデートしました。スリットでケラれなくなりました。</dd>
+
+<!-- <dt>2023/10/某日<span>お知らせ</span></dt>
+<dd>HくんがSARAOに到着しました。</dd>  -->
+
+<dt>2023/07/某日<span>お知らせ</span></dt>
+<dd>PRIME-Camが検出器4枚で稼働し始めました。</dd>
+
+<dt>2023/02/某日<span>お知らせ</span></dt>
+<dd>PRIME-Camのcold windowのフランジを交換しました。</dd>
+
+<dt>2022/10/某日<span>お知らせ</span></dt>
+<dd>PRIME-Camをインストールしました。</dd>
+
 <dt>2022/08/某日<span>お知らせ</span></dt>
 <dd>望遠鏡の建設が終了しました。</dd>
 
